test_files/positive/comment/comment.stats_strict
Not a PDF file
PDF error : Lexing error : unexpected character : 0x25 at offset 26 [0x1a] in file !
