test_files/negative/generation/negative.stats_strict
Not a PDF file
PDF error : Syntax error at offset 622 [0x26e] in file !
